<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_white_with_gradient"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <com.ezly.ezly_android.UI.Widget.EzlyButton
            android:id="@+id/btn_skip"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@color/transparent"
            android:text="@string/skip"
            android:textColor="@color/grey_B8"/>

        <com.ezly.ezly_android.UI.Widget.EzlyEditText
            android:id="@+id/txt_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:layout_toLeftOf="@id/btn_skip"
            android:gravity="center_vertical"
            android:hint="@string/search_hint"
            android:textSize="14sp"
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="actionSearch"
            android:background="@color/transparent"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

    <com.ezly.ezly_android.UI.Widget.EzlyTextView
        android:id="@+id/txt_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_bar"
        android:layout_marginTop="20dp"
        android:text="@string/search_desc"
        android:textColor="@color/grey_66"
        android:textSize="25sp"
        android:gravity="center"/>

    <LinearLayout
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_below="@+id/txt_desc"
        android:layout_alignParentStart="true"
        android:visibility="gone">
        <com.ezly.ezly_android.UI.Widget.EzlyTextView
            android:id="@+id/txt_need"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_need"
            android:textColor="@color/btn_post"
            android:textSize="20sp"/>

        <com.ezly.ezly_android.UI.Widget.EzlyTextView
            android:id="@+id/txt_provide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_provide"
            android:layout_marginLeft="30dp"
            android:textColor="@color/divider"
            android:textSize="20sp"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/category_list"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:layout_below="@id/search_bar"
        android:paddingTop="20dp"
        android:clipToPadding="false"
        android:layout_centerHorizontal="true"
        android:alpha="1"/>

</RelativeLayout>