<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_white_with_gradient">
        <LinearLayout
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="14dp"
                android:layout_height="22dp"
                android:padding="2dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:src="@drawable/ic_back"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/btn_back"
                android:layout_marginLeft="10dp"
                android:text="@string/back"
                android:textSize="17sp"
                android:textColor="@color/grey_66"
                android:id="@+id/textView" />
        </LinearLayout>


        <com.ezly.ezly_android.UI.Widget.EzlyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/post_detail"
            android:textSize="17sp"
            android:textColor="@color/grey_66"/>

    </RelativeLayout>

    <Button
        android:id="@+id/btn_post"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/btn_post"
        android:text="@string/post"
        android:textColor="@color/white"
        android:textSize="18sp"/>

    <LinearLayout
        android:id="@+id/expiry_pnl"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_above="@id/btn_post"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentRight="true"
        android:gravity="center">

        <com.ezly.ezly_android.UI.Widget.EzlyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/expire"
            android:textColor="@color/grey_66"
            android:textSize="13sp"
            android:layout_gravity="center"/>

        <Spinner
            android:id="@+id/expire_spinner"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:layout_centerVertical="true"
            android:spinnerMode="dropdown"
            android:popupBackground="@color/white"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/location_pnl"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_above="@id/btn_post"
        android:layout_toLeftOf="@id/expiry_pnl"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:padding="5dp"
            android:src="@drawable/loc_marker"
            android:background="@drawable/round_bg_dark_grey"
            android:layout_gravity="center"/>

        <com.ezly.ezly_android.UI.Widget.EzlyTextView
            android:id="@+id/txt_location"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:textColor="@color/grey_66"
            android:textSize="13sp"
            android:text="@string/loading"
            android:maxLines="1"
            android:ellipsize="end"
            android:gravity="center_vertical"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/image_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/location_pnl"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:overScrollMode="never"/>

    <com.ezly.ezly_android.UI.Widget.CircleImageView
        android:id="@+id/iv_category"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@+id/top_bar"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="20dp"
        android:src="@drawable/ct_homework_cleaner"/>

    <com.ezly.ezly_android.UI.Widget.EzlyEditText
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_post_job_title"
        android:textColorHint="@color/divider"
        android:layout_below="@+id/top_bar"
        android:layout_toRightOf="@id/iv_category"
        android:textSize="20sp"
        android:textColor="@color/grey_66"
        android:background="@color/transparent"/>


    <View
        android:id="@+id/title_divide"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@id/txt_title"
        android:background="@color/divider"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"/>


    <com.ezly.ezly_android.UI.Widget.EzlyEditText
        android:id="@+id/txt_desc"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_below="@id/title_divide"
        android:layout_above="@id/image_list"
        android:textColor="@color/grey_66"
        android:textColorHint="@color/divider"
        android:hint="@string/hint_post_job_desc"
        android:textSize="18sp"
        android:gravity="top"
        android:background="@color/transparent"/>

    <LinearLayout
        android:id="@+id/loading_indicator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/top_bar"
        android:background="@color/black_transparent_50"
        android:gravity="center"
        android:visibility="gone">
        <com.github.ybq.android.spinkit.SpinKitView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            style="@style/SpinKitView.Large.Circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:SpinKit_Color="@color/black"/>
    </LinearLayout>
</RelativeLayout>